@@ -1,6 +1,6 @@
 ## Process this with automake to create Makefile.in
 
-SUBDIRS = bytecode math lists $(XML_SUBDIR) text mapping expr \
+SUBDIRS = bytecode math lists text mapping $(XML_SUBDIR) expr \
 	kawa commonlisp ecmascript $(BRL_SUBDIR) $(XQUERY_SUBDIR) \
 	$(SWING_SUBDIRS)
 if ENABLE_XML
